syntax = "proto2";

enum MessageType {
  	ping = 0;
  	pong = 1;
  	init_request = 2;
  	init_response = 3;
    ethereum_address_subscription_request = 4;
    ethereum_address_unsubscription_request = 5;
    ethereum_all_addresses_unsubscription_request = 6;
    ethereum_address_subscription_response = 7;
    ethereum_address_balance_request = 8;
    ethereum_address_balance_response = 9;
    current_block_number_request = 10;
    current_block_number_response = 11;
    error = 12;
    serial_request = 13;
    serial_response = 14;
    whisper_subscribe = 15;
    whisper_unsubscribe_all = 16;
    whisper_transmitted_message = 17;
    whisper_received_message = 18;
}

message EthereumAddressSubscription {
    optional string to_address = 1;
    optional string from_address = 2;
    optional float value = 3;
    optional string hash = 4;
    optional EthereumBlock block = 5;
}

message EthereumAddressBalance {
    optional string address = 1;
    optional float value = 2;
}

message EthereumBlock {
    optional int32 blockNumber = 1;
    optional string blockHash = 2;
}

message SerialMessage {
    optional bytes data = 1;
}

message WhisperSubscribe {
    optional string private_key = 1;
    optional string sym_key_password = 2;
    optional string topic = 3;
    optional string pubkey = 4;
    optional bool is_ascii = 5;
}

message TransmittedWhisperMessage {
    optional string pub_key = 1;
    optional string sym_key_password = 2;
    optional string signature_private_key = 3;
    optional string topic = 4;
    optional bool is_ascii = 5;
    optional string payload = 6;
}

message ReceivedWhisperMessage {
    optional string from = 1;
    optional string topic = 2;
    optional bool is_ascii = 3;
    optional string payload = 4;
    optional int32 timestamp = 5;
}

message Error {
    optional int32 error_number = 1;
}
